Revert "Revert "Lift combat actions""
This reverts commit 1d6d42be3c2c0b54184b8611de9ba6e1c1175364.